--- a/public/example/css/custom.css
+++ b/public/example/css/custom.css
@@ -96,3 +96,7 @@
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
     cursor: pointer; /* Add a pointer on hover */
 }
+
+.menu_item {
+    color: gray;
+}
